Inclusão de icone e renomeação de arquivos e URLs